--- a/cssBayan/reset.css
+++ b/cssBayan/reset.css
@@ -100,3 +100,11 @@ label {
 legend {
   display: block;
 }
+
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: transparent;
+}
